# djass

./: .env.example  .eslintrc  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  Dockerfile-python  Makefile  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  docker-compose-local.yml  docker-compose-prod.yml  fly.toml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  tailwind.config.js
.agents/skills/taste-skill/: SKILL.md
.cursor/: mcp.json
.github/workflows/: ci.yml  cli-release.yml  deploy-workers.yml  deploy.yml
apps/api/: admin.py  audit.py  auth.py  mcp.py  models.py  project_generation.py  schemas.py  test_mcp.py  test_spec_001_contract.py  tests.py  urls.py  utils.py  views.py
apps/api/migrations/: 0001_initial.py  0002_project_api_download_action.py
apps/blog/: tests.py  views.py
apps/blog/migrations/: 0001_initial.py
apps/core/: __init__.py  agent_prompts.py  choices.py  context_processors.py  forms.py  generator_options.py  models.py  pricing.py  project_limits.py  signals.py  stripe_webhooks.py  tasks.py  urls.py  utils.py  views.py
apps/core/migrations/: 0002_initial.py  0003_project_projectartifact.py  0004_launch_price_reservation.py
apps/core/tests/: conftest.py  test_agent_prompts.py  test_auth_billing_regression.py  test_checkout_session.py  test_email_delivery.py  test_generation_hardening.py  test_generator_options.py  test_helpers.py  test_management_setup_stripe_lifetime_price.py  test_projects.py  test_sentry_observability.py  (+5 more)
apps/docs/: AGENTS.md  navigation.yaml  test_cli_copy.py  test_mcp_workflow_copy.py  test_workflow_copy.py  tests.py  urls.py  views.py
apps/mcp/: __init__.py  hosted.py  server.py  services.py  tests.py  urls.py  views.py
apps/pages/: test_marketing_copy.py  tests.py  urls.py  views.py
cli/: README.md  go.mod
deployment/: Dockerfile  entrypoint.sh
djass/: adapters.py  asgi.py  sentry_utils.py  settings.py  settings_test.py  sitemaps.py  urls.py  utils.py  wsgi.py
frontend/: README.md
frontend/templates/: 404.html  base_app.html  base_landing.html
scripts/: copy-app-js.mjs  copy-vendor-assets.mjs  watch-assets.mjs
(+107 files in other folders)
