[project]
name = "djass"
version = "0.1.0"
description = "Web app wrapper around django-saas-starter cookiecutter."
authors = [{ name = "Rasul", email = "rasul@lvtd.dev" }]
requires-python = ">=3.14.5,<4.0"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=6.0.5",
    "django-allauth>=65.16.1",
    "django-anymail>=15.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-htmx>=1.27.0",
    "django-ninja>=1.5.3",
    "django-q2>=1.9.0",
    "django-storages>=1.14.6",
    "django-structlog>=10.0.0",
    "django-widget-tweaks>=1.5.1",
    "fido2>=2.2.0,<3",
    "gunicorn>=26.0.0",
    "ipython>=9.10.0",
    "markdown>=3.10.1",
    "pillow>=12.1.0",
    "psycopg[binary]>=3.3.2",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "redis>=7.1.0",
    "structlog>=25.5.0",
    "tqdm>=4.67.3",
    "whitenoise>=6.11.0",
    "sentry-sdk>=2.59.0",
    "structlog-sentry>=2.2.1",
    
    "posthog>=7.8.2",
    
    "stripe>=14.3.0",
    
    "django-mjml>=1.5",
    
    "pydantic-ai>=1.55.0",
    "pgvector>=0.4.2",
    
    "logfire>=4.22.0",
    
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
    "pygments>=2.19.2",
    "mcp[cli]>=1.27.1",
    
]

[project.scripts]
djass-mcp = "apps.mcp.server:main"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "DJ",   # django-specific rules
    "UP",   # pyupgrade
    "C90",  # mccabe complexity
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "F401", "F403", "F405"]

[tool.ruff.format]
quote-style = "double"

[tool.djlint]
profile="django"
ignore = "H031,H006,H023,H021,H011,T002"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
